# TaoSbeechDSP

./: CMakeLists.txt  README.md  demo_dualfilter.c  demo_f0tracker.c  demo_kalman.c  demo_mmsenoise.c  demo_pnlms.c  show_f0.py
aec_filters/: aec_dual.c  aec_dual.h  aec_kalman.c  aec_kalman.h  aec_pnlms.c  aec_pnlms.h  common_states.c  common_states.h  mdf.c  mdf.h
common/: arch.h  io_utils.c  io_utils.h  numeric.c  numeric.h  reduce.c  reduce.h  vector.c  vector.h
dsp_utils/: dsp_common_func.c  dsp_common_func.h  filterbank.c  filterbank.h  smallft.c  smallft.h
f0tracker/: f0tracker.c  f0tracker.h  lpc.c  lpc.h
mmse_noise/: mmse_noise.c  mmse_noise.h
test_files/: test_far.pcm  test_mic.pcm
